# openvino

./: logs.txt
LicensePlate/: CMakeLists.txt
LicensePlate/include/: utils.h
LicensePlate/src/: main.cpp  utils.cpp
Yolo-v5/: CMakeLists.txt  quantization.py  readme.md
Yolo-v5/include/: detector.h
Yolo-v5/model/: yolov5s.xml  yolov5s_int8.xml
Yolo-v5/opencv/lib/: libopencv_highgui.so.4.5.0  libopencv_imgcodecs.so.4.5.0  libopencv_videoio.so.4.5.0
Yolo-v5/openvino/docs/: OpenVINO-GetStarted-online.html  OpenVINO-Install-Linux-online.html  OpenVINO-Install-Windows-online.html  OpenVINO-Install-macOS-online.html
Yolo-v5/openvino/docs/licensing/: OpenVINOsupport.txt  readme.txt  redist.txt  runtime-third-party-programs.txt
Yolo-v5/openvino/lib/intel64/: libopenvino.so.2301
Yolo-v5/openvino/runtime/cmake/: InferenceEngineConfig-version.cmake  OpenVINOConfig-version.cmake  OpenVINOConfig.cmake  OpenVINOTargets-release.cmake  OpenVINOTargets.cmake  ngraphConfigVersion.cmake
Yolo-v5/openvino/runtime/lib/intel64/: libgna.so.3  libgna.so.3.5.0.1906  libopenvino_c.so.2023.0.1  libopenvino_c.so.2301  libopenvino_ir_frontend.so.2023.0.1  libopenvino_ir_frontend.so.2301  libopenvino_onnx_frontend.so.2023.0.1  libopenvino_onnx_frontend.so.2301  libopenvino_paddle_frontend.so.2023.0.1  libopenvino_paddle_frontend.so.2301  libopenvino_pytorch_frontend.so.2023.0.1  libopenvino_pytorch_frontend.so.2301  libopenvino_tensorflow_frontend.so.2023.0.1  libopenvino_tensorflow_frontend.so.2301  libopenvino_tensorflow_lite_frontend.so.2023.0.1  libopenvino_tensorflow_lite_frontend.so.2301
Yolo-v5/openvino/runtime/lib/intel64/pkgconfig/: openvino.pc
Yolo-v5/openvino/tools/: requirements.txt  requirements_caffe.txt  requirements_kaldi.txt  requirements_mxnet.txt  requirements_onnx.txt  requirements_pytorch.txt  requirements_tensorflow.txt  requirements_tensorflow2.txt
Yolo-v5/src/: detector.cpp  main.cpp
Yolo-v5/windows/: yolov5.sln
Yolo-v5/windows/yolov5/: detector.cpp  detector.h  infer.cpp  infer.h  main.cpp  yolov5.vcxproj  yolov5.vcxproj.filters
Yolo-v5/windows/yolov5/x64/Release/: yolov5.exe.recipe  yolov5.iobj  yolov5.ipdb
Yolo-v5/windows/yolov5/x64/Release/yolov5.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  Cl.items.tlog  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog  yolov5.lastbuildstate
examples/: convert.py
test/: emb_model.xml  test.py
